Fix: The way the photo is uploaded is fixed.

--- a/auth-frontend/index.html
+++ b/auth-frontend/index.html
@@ -4,6 +4,19 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Showcasing my proficiency in React and .NET Framework through an innovative Authentication app with JWT security and Firebase storage integration for profile pictures.">
+    <meta name="keywords" content="Authentication app, React, .NET Framework, JWT, Firebase storage, Profile pictures">
+    <meta name="author" content="Leonardo Perdomo">
+    <meta property="og:title" content="Authentication App Project">
+    <meta property="og:description" content="Showcasing my proficiency in React and .NET Framework through an innovative Authentication app with JWT security and Firebase storage integration for profile pictures.">
+    <meta property="og:image" content="https://github.com/leonardoapd/authentication-app-master/blob/main/auth-app-desktop.png">
+    <meta property="og:url" content="https://auth-dev.netlify.app/">
+    <meta property="og:type" content="website">
+    <meta name="twitter:card" content="summary">
+    <meta name="twitter:title" content="Authentication App Project">
+    <meta name="twitter:description" content="Showcasing my proficiency in React and .NET Framework through an innovative Authentication app with JWT security and Firebase storage integration for profile pictures.">
+    <meta name="twitter:image" content="https://github.com/leonardoapd/authentication-app-master/blob/main/auth-app-desktop.png">
+    <meta name="twitter:url" content="https://auth-dev.netlify.app/">
     <title>Authentication App</title>
   </head>
   <body>
